[gd_scene load_steps=5 format=3 uid="uid://bap5id501d27i"]

[ext_resource type="StyleBox" path="res://Styles/new_style_box_flat.tres" id="1_byla1"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_jltmw"]
[ext_resource type="StyleBox" uid="uid://cys8q4ixagc4q" path="res://Styles/button hover.tres" id="3_vd4sj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_clxh0"]
bg_color = Color(0.470076, 0.470076, 0.470076, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jltmw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -46.0
offset_right = 148.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("1_byla1")
theme_override_styles/hover = ExtResource("3_vd4sj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_clxh0")
theme_override_styles/normal = ExtResource("1_byla1")
text = "To Game"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("1_byla1")
theme_override_styles/hover = ExtResource("3_vd4sj")
theme_override_styles/pressed = ExtResource("3_vd4sj")
theme_override_styles/normal = ExtResource("1_byla1")
text = "Leaderboard"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("1_byla1")
theme_override_styles/hover = ExtResource("3_vd4sj")
theme_override_styles/pressed = ExtResource("3_vd4sj")
theme_override_styles/normal = ExtResource("1_byla1")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
